--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -13,7 +13,7 @@ h2 {
   font-family: $main-font;
   font-style: normal;
   font-weight: 600;
-  font-size: 44px;
+  font-size: 2.292vw;
   line-height: 66px;
   color: $basic-color;
   position: relative;
