--- a/scss/style.css
+++ b/scss/style.css
@@ -69,7 +69,7 @@ h2 {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 600;
-  font-size: 44px;
+  font-size: 2.292vw;
   line-height: 66px;
   color: #030A1B;
   position: relative;
@@ -156,6 +156,106 @@ button {
   color: #FE753F;
 }
 
+.subscribe {
+  padding-bottom: 140px;
+  position: relative;
+}
+.subscribe .wrapper-subscribe {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background-color: #433E89;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.subscribe .wrapper-subscribe:before {
+  content: "";
+  position: absolute;
+  width: 208px;
+  height: 208px;
+  left: -130px;
+  top: 30px;
+  background: #FFFFFF;
+  opacity: 0.1;
+  border-radius: 50%;
+}
+.subscribe .wrapper-subscribe:after {
+  content: "";
+  position: absolute;
+  width: 208px;
+  height: 208px;
+  right: 60px;
+  bottom: -135px;
+  background: #FFFFFF;
+  opacity: 0.1;
+  border-radius: 50%;
+}
+.subscribe .wrapper-subscribe .wrapper-text {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 70px 0;
+}
+.subscribe .wrapper-subscribe .wrapper-text h2 {
+  padding-bottom: 15px;
+  color: #FFFFFF;
+}
+.subscribe .wrapper-subscribe .wrapper-text h2:before {
+  display: none;
+}
+.subscribe .wrapper-subscribe .wrapper-text .wrapper-paragraph {
+  width: 44%;
+}
+.subscribe .wrapper-subscribe .wrapper-text .wrapper-paragraph p {
+  font-size: 0.833vw;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+.subscribe .wrapper-subscribe .wrapper-email {
+  display: flex;
+  align-items: center;
+  width: 51.6%;
+  background: #FFFFFF;
+  border-radius: 10px;
+  margin-bottom: 70px;
+  height: 70px;
+}
+.subscribe .wrapper-subscribe .wrapper-email input {
+  width: 100%;
+  height: 70px;
+  border: none;
+  background-color: transparent;
+  padding: 0 30px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.833vw;
+  line-height: 24px;
+  color: #030A1B;
+}
+.subscribe .wrapper-subscribe .wrapper-email input:focus-visible {
+  outline: none;
+}
+.subscribe .wrapper-subscribe .wrapper-email input::placeholder {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.833vw;
+  line-height: 24px;
+  color: #030A1B;
+  opacity: 0.5;
+}
+.subscribe .wrapper-subscribe .wrapper-email button {
+  padding: 16px 41px;
+  margin-right: 7px;
+}
+
 .footer {
   padding-bottom: 100px;
 }
@@ -232,12 +332,6 @@ button {
 }
 .footer .wrapper-footer .footer-blocks .wrapper-content .footer-navigation li + li {
   padding-top: 15px;
-}
-
-@media (min-width: 1260px) and (max-width: 1440px) {
-  button {
-    padding: 10px 20px;
-  }
 }
 
 /*# sourceMappingURL=style.css.map */
