--- a/scss/style.css
+++ b/scss/style.css
@@ -156,6 +156,20 @@ button {
   color: #FE753F;
 }
 
+.partners {
+  padding-bottom: 140px;
+}
+.partners .wrapper-container .wrapper-title {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 65px;
+}
+.partners .wrapper-container .wrapper-partners-blocks {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .subscribe {
   padding-bottom: 140px;
   position: relative;
