--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,6 +78,151 @@
   }
 }
 
+.properties {
+  padding-bottom: 140px;
+
+  .wrapper-properties {
+    width: 100%;
+
+    .wrapper-title {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 70px;
+
+      a {
+        font-family: $main-font;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 0.833vw;
+        line-height: 24px;
+        color: $decoration-color-text;
+      }
+    }
+
+    .wrapper-properties-blocks {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      .properties-block {
+        margin-bottom: 30px;
+        width: 31%;
+        box-shadow: 0 8px 70px rgba(0, 0, 0, 0.07);
+        border-radius: 10px;
+
+        .properties-img {
+          width: 100%;
+
+          img {
+            width: 100%;
+          }
+        }
+
+        .properties-info {
+          padding: 30px;
+
+          .properties-title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-bottom: 10px;
+
+            h3 {
+              font-family: $main-font;
+              font-style: normal;
+              font-weight: 600;
+              font-size: 1.146vw;
+              line-height: 33px;
+              color: $basic-color;
+            }
+
+            .favorites {
+              cursor: pointer;
+
+              i {
+                color: #BBBBBB;
+              }
+
+              &.active {
+                i {
+                  color: #E61E14;
+                }
+              }
+            }
+          }
+
+          .properties-location {
+            display: flex;
+            align-items: center;
+            padding-bottom: 20px;
+
+            i {
+              opacity: 0.5;
+            }
+
+            p {
+              padding-left: 10px;
+              font-weight: 400;
+              font-size: 0.833vw;
+              line-height: 24px;
+            }
+          }
+
+          .properties-points {
+            display: flex;
+            align-items: center;
+            padding-bottom: 20px;
+
+            .point {
+              i {
+                opacity: 0.5;
+              }
+
+              span {
+                padding-left: 4px;
+                font-family: $main-font;
+                font-weight: 400;
+                font-size: 0.729vw;
+                line-height: 21px;
+                color: $basic-color;
+                opacity: 0.9;
+              }
+            }
+
+            .point + .point {
+              padding-left: 20px;
+            }
+          }
+
+          .properties-price {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            span {
+              font-family: $main-font;
+              font-style: normal;
+              font-weight: 600;
+              font-size: 1.146vw;
+              line-height: 33px;
+              color: $decoration-color-text;
+            }
+
+            button {
+              font-weight: 500;
+              font-size: 0.833vw;
+              line-height: 24px;
+              border-radius: 5px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 .featured {
   margin-bottom: 140px;
   background-color: #F9F9F9;
