add section header content and reviews

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,3 +1,9 @@
+@media (min-width: 1440px) and (max-width: 1920px){
+  .header-content .wrapper-header-content .header-text .header-tabs .wrapper-tabs {
+    width: 900px;
+  }
+}
+
 @media (min-width: 1260px) and (max-width: 1440px){
   button {
     padding: 10px 20px;
