--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,6 @@
 @import "reset";
 @import "global";
 
-
 .header {
   padding-top: 35px;
   padding-bottom: 70px;
@@ -44,12 +43,189 @@
             opacity: 0.7;
             transition: all 0.5s;
 
+            &.active {
+              color: $decoration-color-text;
+              padding-bottom: 5px;
+              border-bottom: 2px solid $decoration-color-text;
+            }
+
             &:hover {
               transition: all 0.5s;
               color: $decoration-color-text;
             }
           }
         }
+      }
+    }
+  }
+}
+
+.header-content {
+  padding-bottom: 140px;
+
+  .wrapper-header-content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    .header-text {
+      width: 45%;
+      padding-top: 50px;
+
+      h1 {
+        font-family: $main-font;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 3.177vw;
+        line-height: 120%;
+        color: $basic-color;
+        padding-bottom: 30px;
+      }
+
+      p {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 0.938vw;
+        line-height: 27px;
+        padding-bottom: 40px;
+      }
+
+      .header-tabs {
+        position: relative;
+
+        .wrapper-tabs {
+          position: absolute;
+          background: #FFFFFF;
+          box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1);
+          border-radius: 5px;
+          width: 700px;
+
+          .nav-pills {
+            padding: 15px 0 0 30px;
+
+            .nav-item {
+              .nav-link {
+                background-color: transparent;
+                color: $basic-color;
+                font-family: $main-font;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 0.938vw;
+                line-height: 27px;
+                padding: 0;
+
+                &.active {
+                  color: $decoration-color-text;
+                }
+              }
+            }
+
+            .nav-item + .nav-item {
+              margin-left: 40px;
+            }
+          }
+
+          .tab-content {
+            padding: 30px;
+
+            .tab-pane {
+              width: 100%;
+
+              .wrapper-tab-parts {
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                .tab-parts {
+                  width: 21%;
+                  border-right: 1px solid #BBBBBB;
+
+                  .tab-parts:last-child {
+                    border-right: unset;
+                  }
+
+                  .part-title {
+                    display: flex;
+                    align-items: center;
+                    padding-bottom: 10px;
+
+                    h4 {
+                      padding-right: 10px;
+                      font-family: $main-font;
+                      font-style: normal;
+                      font-weight: 400;
+                      font-size: 0.833vw;
+                      line-height: 24px;
+                      color: $basic-color;
+                      opacity: 0.7;
+                    }
+
+                    i {
+                      color: $basic-color;
+                      opacity: 0.7;
+                    }
+                  }
+
+                  .part-select {
+                    width: 100%;
+
+                    .form-select {
+                      cursor: pointer;
+                      width: 90%;
+                      border: none;
+                      padding: 0;
+                      background: transparent;
+                      font-family: $main-font;
+                      font-style: normal;
+                      font-weight: 500;
+                      font-size: 1.146vw;
+                      line-height: 33px;
+                      color: $basic-color;
+
+                      .btn {
+                        background: transparent;
+                        border: none;
+                        padding: 0;
+
+                        &:focus-visible {
+                          outline: none;
+                        }
+                      }
+
+                      &:focus {
+                        box-shadow: unset;
+                        border-color: unset;
+                      }
+                    }
+                  }
+
+                  button {
+                    width: 100%;
+                    padding: 15px 0;
+                    font-size: 0.833vw;
+                  }
+                }
+
+                .tab-parts:nth-child(3) {
+                  border-right: unset;
+                }
+
+                .tab-parts:last-child {
+                  border-right: unset;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .header-img {
+      width: 45%;
+
+      img {
+        width: 100%;
       }
     }
   }
@@ -312,6 +488,157 @@
 
       img {
         width: 100%;
+      }
+    }
+  }
+}
+
+.reviews {
+  padding-bottom: 140px;
+
+  .wrapper-reviews {
+    .wrapper-title {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .wrapper-title-top {
+        padding-bottom: 10px;
+
+        span {
+          font-family: $main-font;
+          font-style: normal;
+          font-weight: 600;
+          font-size: 0.833vw;
+          line-height: 24px;
+          letter-spacing: 0.08em;
+          text-transform: uppercase;
+          color: $decoration-color-text;
+        }
+      }
+
+      .wrapper-title-bottom {
+        padding-bottom: 70px;
+      }
+    }
+
+    .wrapper-carousel {
+      width: 100%;
+
+      .carousel-reviews {
+
+        .slick-list {
+
+        }
+
+        .review-item {
+          margin: 0 30px 0 0;
+          padding: 30px;
+          border: 2px solid rgba(254, 117, 63, 0.1);
+          border-radius: 10px;
+
+          .wrapper-info-reviews {
+            padding-bottom: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            .wrapper-personal-info {
+              display: flex;
+              align-items: center;
+
+              .wrapper-img {
+                width: 70px;
+                height: 70px;
+
+                img {
+                  border-radius: 50%;
+                  width: 100%;
+                  object-fit: cover;
+                }
+              }
+
+              .wrapper-name {
+                padding-left: 30px;
+
+                h3 {
+                  font-family: $main-font;
+                  font-style: normal;
+                  font-weight: 600;
+                  font-size: 1.146vw;
+                  line-height: 33px;
+                  color: $basic-color;
+                }
+
+                p {
+                  font-style: normal;
+                  font-weight: 400;
+                  font-size: 0.833vw;
+                  line-height: 24px;
+                }
+              }
+            }
+
+            .wrapper-decoration {
+              width: 64px;
+              height: 64px;
+
+              img {
+                width: 100%;
+              }
+            }
+          }
+
+          .wrapper-review {
+
+            p {
+              font-style: normal;
+              font-weight: 400;
+              font-size: 0.833vw;
+              line-height: 24px;
+            }
+          }
+        }
+      }
+
+      .carousel-dots {
+        padding-top: 40px;
+
+        .slick-dots {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .slick-active {
+
+            button {
+              font-size: 0;
+              width: 12px;
+              height: 12px;
+              border-radius: 50%;
+              padding: 0;
+              color: $button-color;
+              background-color: $button-color;
+            }
+          }
+
+          li {
+            button {
+              font-size: 0;
+              width: 12px;
+              height: 12px;
+              border-radius: 50%;
+              padding: 0;
+              color: #EDEDED;
+              background-color: #EDEDED;
+            }
+          }
+
+          li + li {
+            margin-left: 10px;
+          }
+        }
       }
     }
   }
